--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="left_Side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="https://avatars.githubusercontent.com/u/137069436?v=4">
+                    <img src="https://avatars.githubusercontent.com/u/122815522?s=400&u=e73c7457a16cfadbdef77012bd3959eb7559b193&v=4">
                 </div>
                 <h2>Hiten mehta<br><span>WEB DEVELOPER</span></h2>
             </div>
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text">26,ambav garh ,ambamata, udaipur</span>
+                        <span class="text">26,ambav garh,ambamata,udaipur</span>
                     </li>
                 </ul>
             </div>
@@ -44,12 +44,12 @@
                     <li>
                         <h5>Class:10,2019</h5>
 
-                        <h4>Maharana Mewar Public School ,Udaipur<strong>88.60%</strong> </h4>
+                        <h4>Maharana Mewar Public School<strong> 88.60%</strong> </h4>
                     </li>
                     <li>
                         <h5>Class:12,2021</h5>
 
-                        <h4>School Of Achiver <strong>94.8%</strong> </h4>
+                        <h4>Maharana Mewar Public School<strong> 94.8%</strong> </h4>
                     </li>
                     <li>
                         <h5>2021 - 2025</h5>
@@ -69,7 +69,7 @@
                     <li>
                         <span class="text">Hindi</span>
                         <span class="percent"></span>
-                        <div style="width: 80%;"></div>
+                        <div style="width: 100%;"></div>
                     </li>
                     <li>
                         <span class="text">Marvadi</span>
@@ -85,7 +85,10 @@
                 <p>I am learning web developer with a passion for problem-solving. I thrive on exploring diverse technologies.
                     Modrate in handling data structures and algorithms.
                      My journey involves a continuous expansion of skills, ensuring
-                    that I stay abreast of the latest advancements in the dynamic field of web development.</p>
+                    that I stay abreast of the latest advancements in the dynamic field of web development.
+                I have also attended many seminars and talks in my collage. 
+                I have quite good leadership quality and can manage according to the situation.
+                </p>
             </div>
             <div class="about skills">
                 <h2 class="title2">Professional Skills</h2>
@@ -98,29 +101,40 @@
                 <div class="box">
                     <h4>CSS</h4>
                     <div class="percent">
-                        <div style="width: 70%;"></div>
+                        <div style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="box">
                     <h4>JAVASCRIPT</h4>
                     <div class="percent">
-                        <div style="width: 95%;"></div>
+                        <div style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="box">
                     <h4>REACT JS(learning)</h4>
                     <div class="percent">
-                        <div style="width:75%;"></div>
+                        <div style="width:55%;"></div>
                     </div>
                 </div>
             </div>
             <div class="About interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
-                    <li><i class="fa fa-bar-chart" aria-hidden="true"></i>Trading</li>
-                    <li><i class="fa fa-laptop" aria-hidden="true"></i>Developing</li>
-                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
-                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>Music</li>
+                    <li><i class="fa fa-bar-chart" aria-hidden="true"></i>Trading</li><br>
+                    <li><i class="fa fa-laptop" aria-hidden="true"></i>Developing</li><br>
+                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li><br>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>Music</li><br>
+                </ul>
+            </div>
+            <div class="achieve">
+                <h2>Achievements</h2>
+                <ul>
+                    <li><i class="fa fa-bar-chart" aria-hidden="true"></i>NCC certificate</li><br>
+                    <li><i class="fa fa-laptop" aria-hidden="true"></i>Scout certificate</li><br>
+                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Got cash price for good marks in class 12 from the school</li><br>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>Paticipated in olympiads</li><br>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared NPTEL exam in Encubation and Entrepreneurship course</li><br>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared JEE mains , Bitsat</li><br>
                 </ul>
             </div>
         </div>
