--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        <span class="text">www.linkedin.com</span>
+                        <span class="text">https://www.linkedin.com/in/hiten-mehta-70a234271/</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -54,7 +54,7 @@
                     <li>
                         <h5>2021 - 2025</h5>
                         <h4>Undergraduate in Infomation and communication Technology</h4>
-                        <h4>PDPU</h4>
+                        <h4>PDPU</h4><strong>CGPA :- 9.2</strong>
                     </li>
                 </ul>
             </div>
