--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        <span class="text">https://www.linkedin.com/in/hiten-mehta-70a234271/</span>
+                        <a href="https://www.linkedin.com/in/hiten-mehta-70a234271/"><span class="text">Linkedin</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
