--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text">26,ambav garh,ambamata,udaipur</span>
+                        <span class="text">26,ambav garh,ambamata,udaipur,Rajasthan</span>
                     </li>
                 </ul>
             </div>
@@ -43,18 +43,16 @@
                 <ul>
                     <li>
                         <h5>Class:10,2019</h5>
-
                         <h4>Maharana Mewar Public School<strong> 88.60%</strong> </h4>
                     </li>
                     <li>
                         <h5>Class:12,2021</h5>
-
                         <h4>Maharana Mewar Public School<strong> 94.8%</strong> </h4>
                     </li>
                     <li>
                         <h5>2021 - 2025</h5>
                         <h4>Undergraduate in Infomation and communication Technology</h4>
-                        <h4>PDPU</h4><strong>CGPA :- 9.2</strong>
+                        <h4>PDEU,Gandhinagar,Gujarat</h4><strong>CGPA :- 9.2</strong>
                     </li>
                 </ul>
             </div>
