--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text">26,ambav garh,ambamata,udaipur,Rajasthan</span>
+                        <span class="text">26,ambav garh,ambamata,Udaipur,Rajasthan</span>
                     </li>
                 </ul>
             </div>
