--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
                         <a href="https://www.linkedin.com/in/hiten-mehta-70a234271/"><span class="text">Linkedin</span></a>
+                        <a href="https://github.com/Hiten-15"><span class="text">Github</span></a>
+                        
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
