--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="imgBx">
                     <img src="https://avatars.githubusercontent.com/u/122815522?s=400&u=e73c7457a16cfadbdef77012bd3959eb7559b193&v=4">
                 </div>
-                <h2>Hiten mehta<br><span>WEB DEVELOPER</span></h2>
+                <h2>Hiten mehta<br><span>WEB DEVELOPER (Learning)</span></h2>
             </div>
             <div class="contactInfo">
                 <h3 class="title">Contact Info</h3>
