--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="imgBx">
                     <img src="https://avatars.githubusercontent.com/u/122815522?s=400&u=e73c7457a16cfadbdef77012bd3959eb7559b193&v=4">
                 </div>
-                <h2>Hiten mehta<br><span>WEB DEVELOPER (Learning)</span></h2>
+                <h2>Hiten mehta<br><span>Student</span></h2>
             </div>
             <div class="contactInfo">
                 <h3 class="title">Contact Info</h3>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <h4>REACT JS(learning)</h4>
+                    <h4>REACT (learning)</h4>
                     <div class="percent">
                         <div style="width:55%;"></div>
                     </div>
@@ -120,21 +120,21 @@
             <div class="About interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
-                    <li><i class="fa fa-bar-chart" aria-hidden="true"></i>Trading</li><br>
                     <li><i class="fa fa-laptop" aria-hidden="true"></i>Developing</li><br>
                     <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li><br>
                     <li><i class="fa fa-briefcase" aria-hidden="true"></i>Music</li><br>
+                    <li><i class="fa fa-bar-chart" aria-hidden="true"></i>Trading</li><br>
                 </ul>
             </div>
             <div class="achieve">
                 <h2>Achievements</h2>
                 <ul>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared JEE mains , Bitsat</li><br>
+                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared NPTEL exam in Encubation and Entrepreneurship course</li><br>
                     <li><i class="fa fa-bar-chart" aria-hidden="true"></i>NCC certificate</li><br>
                     <li><i class="fa fa-laptop" aria-hidden="true"></i>Scout certificate</li><br>
-                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Got cash price for good marks in class 12 from the school</li><br>
+                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Got cash price forgood academic excellence from the school</li><br>
                     <li><i class="fa fa-briefcase" aria-hidden="true"></i>Paticipated in olympiads</li><br>
-                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared NPTEL exam in Encubation and Entrepreneurship course</li><br>
-                    <li><i class="fa fa-briefcase" aria-hidden="true"></i>cleared JEE mains , Bitsat</li><br>
                 </ul>
             </div>
         </div>
